# cuda-scan-tutorial

./: .gitignore  CMakeLists.txt  README.md  plots.ipynb
cuda_scan/: README.md
cuda_scan/include/: gpuerrors.h  sum_host.h  test_data.h
cuda_scan/src/: CMakeLists.txt  sum_host.cu  sum_kernels.cu
include/: sum_kernels.h
src/: CMakeLists.txt  sum_host.cu  sum_kernels.cu
